--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.1.3",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "@material-ui/core": "4.1.3",
+    "@material-ui/icons": "^4.2.1",
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
