--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@material-ui/icons": "^4.2.1",
     "firebase": "^6.2.4",
     "react": "16.8.6",
-    "react-dom": "16.8.6"
+    "react-dom": "16.8.6",
+    "react-router-dom": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
