--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@material-ui/core": "4.1.3",
     "@material-ui/icons": "^4.2.1",
-    "firebase": "^6.2.4",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
+    "firebase": "^6.4.2",
+    "react": "^16.8.0 >=15 ^16.0.0",
+    "react-dom": "^16.8.0",
     "react-router-dom": "^5.0.1"
   },
   "scripts": {
