--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^6.4.2",
     "react": "^16.8.0 >=15 ^16.0.0",
     "react-dom": "^16.8.0",
+    "react-firebase-hooks": "^2.1.0",
     "react-router-dom": "^5.0.1"
   },
   "scripts": {
