--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.8.0 >=15 ^16.0.0",
     "react-dom": "^16.8.0",
     "react-firebase-hooks": "^2.1.0",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "use-global-hook": "^0.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
